<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_surgeryes"
            android:icon="@drawable/ic_surgeryes"
            android:title="@string/surgeryes_nav">
        </item>
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/prfile_nav">
        </item>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about_nav">
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out_nav">
        </item>

    </group>

</menu>