<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    tools:context=".activities.fragment_about">

    <ScrollView
        android:id="@+id/scrolView_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <ImageView
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/app_makers">

                </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1">

                </TextView>

                <TextView
                    android:id="@+id/versionCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="VersionCode"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/versionName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1">

                </TextView>

                <TextView
                    android:id="@+id/VersionName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Verzió neve"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1">

                </TextView>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>